--- a/index.htm
+++ b/index.htm
@@ -91,6 +91,14 @@
 							<span class="label label-warning pull-right">1.3</span>
 						</li>
 						<li class="list-group-item">
+							<a target="_blank" href="http://docs.ansible.com/playbooks_delegation.html#run-once">
+								<span class="glyphicon glyphicon-new-window smaller"></span>
+							</a>
+							<span class="js-module-option-name">run_once</span>
+							<input type="checkbox" class="js-module-option-value js-module-option-checkbox-value js-module-common-option" autocomplete="off" />
+							<span class="label label-warning pull-right">1.7</span>
+						</li>
+						<li class="list-group-item">
 							<a target="_blank" href="http://docs.ansible.com/playbooks_error_handling.html#overriding-the-changed-result">
 								<span class="glyphicon glyphicon-new-window smaller"></span>
 							</a>
