Add support for delegate_to: option.

--- a/index.htm
+++ b/index.htm
@@ -115,6 +115,14 @@
 							<input type="text" class="js-module-option-value js-module-common-option" autocomplete="off" />
 							<span class="label label-warning pull-right">1.4</span>
 						</li>
+						<li class="list-group-item">
+							<a target="_blank" href="http://docs.ansible.com/playbooks_delegation.html#delegation">
+								<span class="glyphicon glyphicon-new-window smaller"></span>
+							</a>
+							<span class="js-module-option-name">delegate_to</span>
+							<input type="text" class="js-module-option-value js-module-common-option" autocomplete="off" />
+							<span class="label label-warning pull-right">0.7</span>
+						</li>
 					</ul>
 				</div>
 				<div class="col-md-4 hidden js-result-command">
