htpasswd: added options.

--- a/index.htm
+++ b/index.htm
@@ -2670,9 +2670,47 @@
 							},
 							{
 								name: 'htpasswd',
-								description: 'Manages user files for basic authentication',
+								title: 'Manages user files for basic authentication',
+								description: 'Add and remove username/password entries in a password file using htpasswd. This is used by web servers such as Apache and Nginx for basic authentication',
+								type: 'core',
 								since_version: '1.3',
 								options: {
+									create: {
+										type: 'choice',
+										choices: ['yes', 'no'],
+										required: false,
+										default_value: 'yes',
+										description: 'Used with state=present. If specified, the file will be created if it does not already exist. If set to "no", will fail if the file does not exist'
+									},
+									crypt_scheme: {
+										type: 'choice',
+										choices: ['apr_md5_crypt', 'des_crypt', 'ldap_sha1', 'plaintext'],
+										required: false,
+										default_value: 'apr_md5_crypt',
+										description: 'Encryption scheme to be used'
+									},
+									name: {
+										type: 'string',
+										required: true,
+										description: 'User name to add or remove'
+									},
+									password: {
+										type: 'string',
+										required: false,
+										description: 'Password associated with user. Must be specified if user does not exist yet'
+									},
+									path: {
+										type: 'string',
+										required: true,
+										description: 'Path to the file that contains the usernames and passwords'
+									},
+									state: {
+										type: 'choice',
+										choices: ['present', 'absent'],
+										required: false,
+										default_value: 'present',
+										description: 'Whether the user entry should be present or not'
+									}
 								}
 							},
 							{
