--- a/index.htm
+++ b/index.htm
@@ -2607,9 +2607,16 @@
 							},
 							{
 								name: 'fail',
-								description: 'Fail with custom message',
+								title: 'Fail with custom message',
+								description: 'This module fails the progress with a custom message. It can be useful for bailing out when a certain condition is met using when',
 								type: 'core',
 								options: {
+									msg: {
+										type: 'string',
+										required: false,
+										default_value: 'Failed as requested from task',
+										description: 'The customized message used for failing execution. If omitted, fail will simple bail out with a generic message',
+									}
 								}
 							},
 							{
