--- a/index.htm
+++ b/index.htm
@@ -2629,9 +2629,27 @@
 							},
 							{
 								name: 'pause',
-								description: 'Pause playbook execution',
+								title: 'Pause playbook execution',
+								description: 'Pauses playbook execution for a set amount of time, or until a prompt is acknowledged. All parameters are optional. The default behavior is to pause with a prompt. You can use ctrl+c if you wish to advance a pause earlier than it is set to expire or if you need to abort a playbook run entirely. To continue early: press ctrl+c and then c. To abort a playbook: press ctrl+c and then a. The pause module integrates into async/parallelized playbooks without any special considerations (see also: Rolling Updates). When using pauses with the serial playbook parameter (as in rolling updates) you are only prompted once for the current group of hosts',
 								type: 'core',
 								options: {
+									minutes: {
+										type: 'integer',
+										required: false,
+										min_value: '0',
+										description: 'Number of minutes to pause for'
+									},
+									prompt: {
+										type: 'string',
+										required: false,
+										description: 'Optional text to use for the prompt message'
+									},
+									seconds: {
+										type: 'integer',
+										required: false,
+										min_value: '0',
+										description: 'Number of seconds to pause for'
+									}
 								}
 							},
 							{
