--- a/index.htm
+++ b/index.htm
@@ -171,8 +171,8 @@
 			</div>
 		</div>
 
-		<script src="http://yastatic.net/jquery/2.1.1/jquery.min.js"></script>
-		<script src="http://yastatic.net/lodash/2.4.1/lodash.underscore.min.js"></script>
+		<script src="https://yastatic.net/jquery/2.1.1/jquery.min.js"></script>
+		<script src="https://yastatic.net/lodash/2.4.1/lodash.underscore.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 		<script>
 			$(document).ready(function() {
